--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,19 +120,30 @@ flex-direction: column;
     align-items: center;
 }
 
-#work-1 {
+/* #work-1 { */
     /* flex: 1 0 auto; */
     /* background-size: cover; */
     /* background-position: center; */
     /* width: 325px; */
-}
+/* } */
+
 #work-1 a {
-    width: 312px;
+    width: 40%;
 }
+
 #work-1 img {
-    height: 400px;
+    /* height: 400px; */
+    width: 100%;
     /* width: 312px; */
     object-fit: cover;
+}
+
+#work-2 {
+    width: 40%;
+}
+
+#work-2 img {
+    width: 100%;
 }
 
 #work-substance section {
